--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
         <div class="skill"><h4>Sql</h4></div>
         <div class="skill"><h4>Git/Github</h4></div>
     </div>
+                <div  class="skill-container">
+        <div class="skill"><h4>Tensor flow</h4></div>
+        <div class="skill"><h4>Sql</h4></div>
+        <div class="skill"><h4>Git/Github</h4></div>
+    </div>
     <div class="skill-container">
         <div class="skill"><h4>Object Oriented Programing</h4></div>
         <div class="skill"><h4>Visual Studio Code</h4></div>
