--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                  <li><a href="#Skills">Skills</a></li>
                  <li><a href="#About">About</a></li>
                  <li><a href="#contact">Contact</a></li>
-               <!--  <li><a href ="resource/Melissa Uchem Resume (4).pdf" download="Melissa Uchem's Resume">Resume</a></li> -->
+               <!--  <li><a href ="">Resume</a></li> -->
              </ul>
          </div>
      </div>
      <!--end nav-->
     <div class = "jumbotron"style = 'margin-bottom:0px;'>
         <div class = "intro-box ">
-            <h1 class ="greet-Txt">Hey! IM Is <span>JOHN MUEMA .</span></h1>
+            <h1 class ="greet-Txt">Hey!  IM <span>JOHN MUEMA .</span></h1>
             <h4 class ="sub-txt"> I'm a Full Stack .Net Developer based in Houston,Texas.</h4>
             <a href = "#Projects"class ='work-link'><b>Check Out My Work</b></a>
 
@@ -69,7 +69,6 @@
     </div>
     <div  class="skill-container">
         <div class="skill"><h4>Microsoft Sql Server</h4></div>
-        <div class="skill"><h4>Sql</h4></div>
         <div class="skill"><h4>Git/Github</h4></div>
     </div>
                 <div  class="skill-container">
