--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <div class="skill-container">
         <div class="skill"><h4>Object Oriented Programing</h4></div>
-        <div class="skill"><h4>Visual Studio Code</h4></div>
+        <div class="skill"><h4> AZURE COSMOS DB</h4></div>
         <div class="skill"><h4>Visual Studio</h4></div>
     </div>
 </div>
