--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
     <div class = 'col-md-6'>
         <h4><b>Vugo</b></h4>
-        <h6>Real Estate Company Website</h6>
+        <h6>RealL Estate Company Website</h6>
         <p>Vugo is a real estate marketplace where users can Filter through the latest home and agent listings.The User experience is developed with Html,Css,and Bootstrap. While
         The front end interface directives and funtionality are pioneered by the AngularJs library using the MVC software design pattern.
         </p>
