--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class = "container" style = "padding:0px 10px">
         <div class = "skill-container">
             <div class = "skill"><h4>C#</h4></div>
-            <div class="skill"><h4>Css3</div>
+            <div class="skill"><h4>C++</div>
             <div class="skill"><h4>ASP.NET CORE</div>
         </div>
         <div class="skill-container" >
@@ -60,7 +60,7 @@
         </div>
     <div class="skill-container">
         <div class="skill"><h4>AngularJs</h4></div>
-        <div class="skill"><h4>C++</h4></div>
+        <div class="skill"><h4>Css3</h4></div>
         <div class="skill"><h4>Azure cloud</h4></div>
     </div>
     <div class="skill-container">
