commits on 15th

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class = "col-md-6">
             <h3 style = "margin-top:12px;"><b>AbCrunch</b></h3>
-            <h6>Fitness Center Company Website</h6>
+            <h6>Fitness  Website</h6>
             <p>AbCrunch is a Fitness Center that offers gym memberships and training.The front end makes use
             of bootstrap's grid system for a responsive user experience and Sass for clean versitle code. The application also
             features a gyms near me page running asynchronous javascript code to
@@ -162,7 +162,7 @@
     <div class = "col-md-6">
         <h3 style = "margin-top:12px;"><b>Skyrail Skate Shop</b></h3>
             <h6>Ecommerce Website</h6>
-            <p>Skyrail is a e-commerce website that sells skatboards,bikes,scooters,clothing and various acessories.The application
+            <p>Skyrail is website that sells skatboards,bikes,scooters,clothing and various acessories.The application
                 is driven by active server pages executed on the Asp.net frameowrk and a Sql server database
                  enabling dynamic content delivery to users.
             </p>
@@ -186,7 +186,7 @@
         <footer class = "text-center"padding: 0 >
             <h2><b>Let's work together </b></h2>
             <p style="margin-bottom:0">
-                like what you see? connect with me on social media and give me the honor to work on your webapplication or mobile application.
+                like what you see? Lets connect on social media and give me the honor to work on your webapplication or mobile application.
             </p>
             <br/>
             <a href = ""class ='work-link'><b>Send a Message</b></a>
@@ -207,7 +207,7 @@
     <section>
         <div class = "container-fluid copyright" style="padding:0">
             <div class ="container">
-                <p><small>© JOHN MICHAEL 2020</small></p>
+                <p><small>© JOHN  MICHAEL 2020</small></p>
             </div>
         </div>
     </section>
