--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class = "container">
         <h2 class = "sec-header"><b> About </b></h2>
         <p>I am a full stack .Net developer with 2years  in  experience developing and maintaining software,
-            I have good understanding of the Azure cloud and how to utilize its resourses .</p>
+            I have good understanding of the Azure cloud .</p>
     </div>
     </section>
     <div class = "container-fluid contact-sec" id = "contact">
