--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class = "col-md-6">
         <h3 style = "margin-top:12px;"><b>Skyrail Skate Shop</b></h3>
             <h6>Ecommerce Website</h6>
-            <p>Skyrail is website that sells skatboards,bikes,scooters,clothing and various acessories.The application
+            <p>Skyrail is website that sells skatboards,bikes,scooters,clothing and acessories.The application
                 is driven by active server pages executed on the Asp.net frameowrk and a Sql server database
                  enabling dynamic content delivery to users.
             </p>
