changed last project

--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
     </div>
     <div class = "col-md-6">
         <h3 style = "margin-top:12px;"><b>Skyrail Skate Shop</b></h3>
-            <h6>Ecommerce Website</h6>
-            <p>Skyrail is website that sells skatboards,bikes,scooters,clothing and acessories.The application
-                is driven by active server pages executed on the Asp.net frameowrk and a Sql server database
+            <h6>Ecommerce Xamarin cross platform (Android and IOS)</h6>
+            <p>Skyrail is APP that sells skatboards,bikes,scooters,HOSTED ON AZURE MOBILE SERVICES.
                  enabling dynamic content delivery to users.
             </p>
                     <button type="button" class="btn btn-outline-danger">Coming Soon</button>
