--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
     <div class = "col-md-6">
         <h3 style = "margin-top:12px;"><b>Skyrail Skate Shop</b></h3>
             <h6>Ecommerce Xamarin cross platform (Android and IOS)</h6>
-            <p>Skyrail is APP that sells skatboards,bikes,scooters,HOSTED ON AZURE MOBILE SERVICES.
-                 enabling dynamic content delivery to users.
+            <p>coming soom
             </p>
                     <button type="button" class="btn btn-outline-danger">Coming Soon</button>
                     <a href = "" target = "_blank">
