--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
      <!--end nav-->
     <div class = "jumbotron"style = 'margin-bottom:0px;'>
         <div class = "intro-box ">
-            <h1 class ="greet-Txt">Hey! IM  <span>JOHN MUEMA .</span></h1>
-            <h4 class ="sub-txt"> I'm a Full Stack .Net Developer based in Houston,Texas.</h4>
+            <h1 class ="greet-Txt">Hey! IM  <span>JOHN MICHAEL .</span></h1>
+            <h4 class ="sub-txt"> I'm a Full Stack .Net Developer .</h4>
             <a href = "#Projects"class ='work-link'><b>Check Out My Work</b></a>
 
         </div>
