--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
         </div>
     </div>
     <div class = "col-md-6">
-        <h3 style = "margin-top:12px;"><b>Skyrail Skate Shop</b></h3>
-            <h6>Ecommerce Xamarin cross platform (Android and IOS)</h6>
+        <h3 style = "margin-top:12px;"><b>Explore california</b></h3>
+            <h6>This is a Asp.net  web app which I used to practice, Azure site hosting  in combianation with git up actions and with continous intergartion and delivery.</h6>
             <p>coming soom
             </p>
-                    <button type="button" class="btn btn-outline-danger">Coming Soon</button>
-                    <a href = "" target = "_blank">
+                    <button type="button" class="btn btn-outline-danger">View project</button>
+                    <a href = "http://explorecalifornia.azurewebsites.net/" target = "_blank">
                     <button type="button" class="btn btn-outline-dark">View Code</button>
                 </a>
         </div>
