--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
     <div class = "col-md-6">
         <h3 style = "margin-top:12px;"><b>Explore california</b></h3>
             <h6>This is a Asp.net  web app which I used to practice, Azure site hosting  in combianation with git up actions and with continous intergartion and delivery.</h6>
-            <p>coming soom
-            </p>
+            
+            
                     <button type="button" class="btn btn-outline-danger">View project</button>
-                    <a href = "" target = "http://explorecalifornia.azurewebsites.net/">
+                    <a href = "http://explorecalifornia.azurewebsites.net/" target = "">
                     <button type="button" class="btn btn-outline-dark">View Code</button>
                 </a>
         </div>
