--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             
             
                     <button type="button" class="btn btn-outline-danger">View project</button>
-                    <a href = "http://explorecalifornia.azurewebsites.net/" target = "">
+                    <a href = "http://explorecalifornia.azurewebsites.net/" target = "http://explorecalifornia.azurewebsites.net/">
                     <button type="button" class="btn btn-outline-dark">View Code</button>
                 </a>
         </div>
