--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <h6>This is a Asp.net  web app which I used to practice, Azure site hosting  in combianation with git up actions and with continous intergartion and delivery.</h6>
             
             
-                    <button type="button" class="btn btn-outline-danger">View project</button>
+                    <button type="button" class="btn btn-outline-danger">View project  <a href ="github.com/johndelphi/HIHIO"/></button>
                     <a href = "http://explorecalifornia.azurewebsites.net/" target = "http://explorecalifornia.azurewebsites.net/">
                     <button type="button" class="btn btn-outline-dark">View Code</button>
                 </a>
