--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         <h3 style = "margin-top:12px;"><b>Explore california</b></h3>
             <h6>This is a Asp.net  web app which I used to practice, Azure site hosting  in combianation with git up actions and with continous intergartion and delivery.</h6>
             
-            <a href = "https://github.com/johndelphi/ASP.NETCORE" target = "">
+            <a href = "http://explorecalifornia.azurewebsites.net/" target = "">
                     <button type="button" class="btn btn-outline-danger">View project  <a href =""/></button>
-                    <a href = "http://explorecalifornia.azurewebsites.net/" target = "http://explorecalifornia.azurewebsites.net/">
+                    <a href = "https://github.com/johndelphi/ASP.NETCORE" target = "http://explorecalifornia.azurewebsites.net/">
                     <button type="button" class="btn btn-outline-dark">View Code</button>
                 </a>
         </div>
