--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <div class = "row">
     <div class = "col-md-6">
         <div class = "img-box">
-            <img src="Images/sky3.PNG">
+            <img src="Images/Screenshot%202020-12-01%20235135.png">
         </div>
     </div>
     <div class = "col-md-6">
