--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <a href = "" target = "_blank">
                     <button type="button" class="btn btn-outline-danger">View Project</button>
                     </a>
-                    <a href = "" target = "_blank">
+                    <a href = "https://relaxed-williams-95689c.netlify.app/" target = "_blank">
                     <button type="button" class="btn btn-outline-dark">View Code</button>
                 </a>
     </div>
