--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             of bootstrap's grid system for a responsive user experience and Sass for clean versitle code. The application also
             features a gyms near me page running asynchronous javascript code to
             render gym location data from server.</p>
-                  <a href = "" target = "_blank">
+                  <a href = "https://suspicious-lichterman-9c4efc.netlify.app/" target = "_blank">
                     <button type="button" class="btn btn-outline-danger">View Project</button>
                     </a>
-                    <a href = "" target = "_blank">
+                    <a href = "https://github.com/johndelphi/Abcrunch" target = "_blank">
                     <button type="button" class="btn btn-outline-dark">View Code</button>
                 </a>
         </div>
