--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
         <div class="skill"><h4>Azure cloud</h4></div>
     </div>
     <div class="skill-container">
-        <div class="skill"><h4>Entity frameowrk</h4></div>
+        <div class="skill"><h4>Entity framework</h4></div>
         <div class="skill"><h4>MVVM</h4></div>
     </div>
     <div  class="skill-container">
         <div class="skill"><h4>Microsoft Sql Server</h4></div>
     </div>
                 <div  class="skill-container">
-        <div class="skill"><h4>Tensor flow</h4></div>
+        <div class="skill"><h4>SQL</h4></div>
      <div class="skill"><h4>Git/Github</h4></div>
     </div>
     <div class="skill-container">
         <div class="skill"><h4>Object Oriented Programing</h4></div>
-        <div class="skill"><h4>GPRC</h4></div>
+        <div class="skill"><h4>MVC</h4></div>
         <div class="skill"><h4>Visual Studio</h4></div>
     </div>
 </div>
