--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div class = "jumbotron"style = 'margin-bottom:0px;'>
         <div class = "intro-box ">
             <h1 class ="greet-Txt">Hey! IM  <span>JOHN MICHAEL .</span></h1>
-            <h4 class ="sub-txt"> I'm a Full Stack .Net Developer .</h4>
+            <h4 class ="sub-txt"> I'm a Full Stack .Net Developer with hands on experience in 
+          implementing cloud resources from storange to security on Azure.</h4>
             <a href = "#Projects"class ='work-link'><b>Check Out My Work</b></a>
 
         </div>
