--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
      <!--end nav-->
     <div class = "jumbotron"style = 'margin-bottom:0px;'>
         <div class = "intro-box ">
-            <h1 class ="greet-Txt">Hey! IM  <span>JOHN MICHAEL .</span></h1>
-            <p> I'm a Full Stack .Net Developer with hands on experience in 
-          implementing cloud resources from storange to security on Azure.</p>
+            <h1 class ="greet-Txt">Hey! IM  <span>JOHN .</span></h1>
+            <p> I'm a Full Stack .Net Developer with hands on experience in <p/>
+         <p> implementing cloud resources from storange to security on Azure.</p>
             <a href = "#Projects"class ='work-link'><b>Check Out My Work</b></a>
 
         </div>
